@startuml

title __APPLI's Class Diagram__\n

  namespace appli {
    class appli.Application {
        {static} + lectureEntrer()
        {static} + main()
    }
  }
  

  namespace appli {
    class appli.Joueur {
        {static} - nbJoueurs : int
        + InfoJoueurToSring()
        + InfoMainJoueurToString()
        + Joueur()
        + aCetteCarteEnMain()
        + getCarteDansMain()
        + getNom()
        + getPileDansBase()
        + nbDeCarteDansPioche()
        + nbDeCarteEnMain()
        + poseCartePileAsc()
        + poseCartePileAscAdv()
        + poseCartePileDesc()
        + poseCartePileDescAdv()
        + remplirMain()
        + remplirMainComplet()
        + verifPoseCartePileAsc()
        + verifPoseCartePileAscAdv()
        + verifPoseCartePileDesc()
        + verifPoseCartePileDescAdv()
    }
  }
  

  namespace appli {
    enum NomJoueur {
      NORD
      SUD
    }
  }
  

  namespace appli {
    class appli.Table {
        - carteJouees : ArrayList<Integer>
        - coupJouees : ArrayList<String>
        + cartesJoueToString()
        + decompose()
        + getCoupJouees()
        + infoJoueurToString()
        + supEntrees()
        + verifDefaite()
        + verifSyntaxique()
        + verifVictoire()
        + victoireToString()
        - distributionDeCarte()
        - poserCartesDansBases()
        - verifAsc()
        - verifDefaiteSpec()
        - verifDesc()
        - verifDoublon()
        - verifPoseAdv()
    }
  }
  

  appli.Joueur o-- appli.Composants.Base : base
  appli.Joueur o-- appli.Composants.Main : main
  appli.Joueur o-- appli.NomJoueur : nom
  appli.Joueur o-- appli.Composants.Cartes : pioche


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
